--- a/styles.css
+++ b/styles.css
@@ -79,11 +79,11 @@ header {
 }
 
 .failures-section {
-  padding: 10vw 0;
+  padding: 5vw 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 10vw;
+  gap: 5vw;
 }
 
 .failures-right {
@@ -105,4 +105,35 @@ header {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+}
+
+.plans-section {
+  padding: 5vw 0;
+}
+
+.plans-section h2 {
+  font-size: 4.8rem;
+  text-align: center;
+  margin-bottom: 5rem;
+}
+
+.plans {
+  display: flex;
+  justify-content: center;
+  gap: 10rem;
+}
+
+.plan {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.plan img {
+  margin-bottom: 2rem;
+}
+
+.plan h3 {
+  font-size: 2.6rem;
 }
