--- a/styles.css
+++ b/styles.css
@@ -160,3 +160,62 @@ header {
   line-height: 1.3;
   margin-bottom: 2rem;
 }
+
+footer {
+  background-color: #212121;
+  color: #f7f7f7;
+  margin-top: 10rem;
+  padding: 5vw 10vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.footer-left {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.footer-left h3 {
+  font-size: 3.2rem;
+}
+
+.footer-left p {
+  max-width: 50%;
+  color: rgba(247, 247, 247, 0.75);
+}
+
+.footer-left .icons {
+  display: flex;
+  gap: 2rem;
+}
+
+.footer-right {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.footer-right h4 {
+  font-size: 2.6rem;
+}
+
+.footer-right input {
+  font-family: inherit;
+  font-size: inherit;
+  width: 50rem;
+  padding: 2rem;
+  background-color: transparent;
+  color: #f7f7f7;
+  border: 1px solid rgba(247, 247, 247, 0.75);
+  border-radius: 5px;
+}
+
+.footer-right .btn {
+  align-self: flex-start;
+}
+
+.footer-right .btn:hover {
+  background-color: #ff4500;
+}
